--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -134,6 +134,7 @@ allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
 allow 2602:2da:0:32:5054:ff:fe6c:39dc;
 allow 2602:2da:0:32:5054:ff:fe7e:7c21;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::3d;
@@ -782,10 +783,7 @@ allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:1e01::2;
-allow 2a12:5940:13e2::2;
 allow 2a12:5940:144f::2;
-allow 2a12:5940:52c2::2;
-allow 2a12:5940:9101::2;
 allow 2a12:5940:b4db::2;
 allow 2a12:5940:b4dd::2;
 allow 2a12:5940:c051::2;
