--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -790,13 +790,13 @@ deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:1e01::2;
 deny 2a12:5940:13e2::2;
+deny 2a12:5940:144f::2;
 deny 2a12:5940:52c2::2;
 deny 2a12:5940:9101::2;
 deny 2a12:5940:b4db::2;
 deny 2a12:5940:b4dd::2;
 deny 2a12:5940:c051::2;
 deny 2a12:5940:c826::2;
-deny 2a12:5940:f0a8::2;
 deny 2a12:a800:1:1:194:26:192:161;
 deny 2a12:a800:2:1:185:241:208:81;
 deny 2a12:a800:2:1:45:138:16:178;
